Feat: Iniciar e Pausar Cronometro

--- a/relogio.html
+++ b/relogio.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <main>
-        
+        <label id="relogio">00:00:00</label>
+        <button onclick="iniciar()">Iniciar</button>
+        <button onclick="pausar()">Pausar</button>
     </main>
 </body>
 </html>
