Feat: Ajuste de espaçamento entre componentes e ajuste de tamanho das fontes

--- a/cronometro.html
+++ b/cronometro.html
@@ -10,9 +10,12 @@
 <body>
     <main>
         <label id="cronometro">00:00:00</label>
-        <button id="btnIniciar" onclick="iniciar()">Iniciar</button>
-        <button id="btnPausar" onclick="pausar()">Pausar</button>
-        <button id="btnVoltar" onclick="voltar()">Voltar</button>
+
+        <div class="botoes">
+            <button id="btnIniciar" onclick="iniciar()">Iniciar</button>
+            <button id="btnPausar" onclick="pausar()">Pausar</button>
+            <button id="btnVoltar" onclick="voltar()">Voltar</button>
+        </div>
     </main>
 </body>
 </html>
